--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'com.google.gms.google-services'
     id 'com.google.firebase.crashlytics'
+    id 'kotlin-kapt'
 
 }
 
@@ -11,11 +12,11 @@ android {
 
     defaultConfig {
         applicationId "com.androidlearn.digishop"
-        minSdk 17
+        minSdk 21
         targetSdk 30
         versionCode 1
         versionName "1.0"
-        vectorDrawables.useSupportLibrary=true
+        vectorDrawables.useSupportLibrary= true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled = true
     }
@@ -32,9 +33,24 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        useIR = true
     }
     buildFeatures {
         viewBinding true
+        dataBinding true
+        compose true
+    }
+    kapt {
+        generateStubs = true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerVersion '1.5.20'
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
     }
 }
 
@@ -44,6 +60,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -58,5 +80,16 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.google.android.gms:play-services-ads:20.3.0'
+   /* implementation 'com.google.dagger:dagger-android:2.35.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.35.1'*/
+
+    implementation "com.google.dagger:dagger-android:2.35.1"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    annotationProcessor "com.google.dagger:dagger-android-processor:2.35.1"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+// Dagger Kotlin
+    kapt "com.google.dagger:dagger-compiler:2.35.1"
+    kapt "com.google.dagger:dagger-android-processor:2.35.1"
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 
 }
