--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'com.google.gms.google-services'
     id 'com.google.firebase.crashlytics'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
 
 }
 
@@ -91,5 +92,18 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:2.35.1"
     kapt "com.google.dagger:dagger-android-processor:2.35.1"
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    def room_version = "2.3.0" // check latest version from docs
+
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation 'com.romandanylyk:pageindicatorview:1.0.3'
+
 
 }
